planning section mobile resppnsive fix

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .smaller-container {
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
 }
 
@@ -260,9 +260,19 @@ a {
 
 /* Planning */
 
+
+#planning h2 {
+    font-size: 24px;
+    margin: 50px 0; 
+}
+
+#planning .white-card {
+    margin-top: 150px;
+}
+
 #planning img {
-    width: 90%;
-    margin-bottom: 70px;
+    width: 100%;
+    margin-bottom: 40px;
 }
 
 #planning .img50 {
@@ -489,6 +499,15 @@ footer {
 
     #planning .col50 {
         width: 100%;
+    }
+
+
+    #planning h2 {
+        font-size: 30px;
+    }
+
+    #planning .white-card {
+        margin-top: 10px;
     }
 
     #benefits .col {
